--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
                 box-sizing: border-box;
             }
         </style>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Merienda:wght@300..900&family=Pacifico&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="./screen2.css" />
     </head>
     <body>
