--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           style="display: none"
           class="typewrite"
           data-period="1500"
-          data-type='[ "ZaloPay cảm ơn bạn vì những cống hiến, nguồn năng lượng, niềm cảm hứng mà bạn mang đến mỗi ngày.", "Chúc cho một nửa xinh đẹp của thế giới những điều tốt đẹp nhất!", "Happy Women&#39;s Day!"]'
+          data-type='[ "chúc tất cả phụ nữ trên thế giới này mãi xinh đẹp, luôn là bông hoa thơm trong vườn hoa ngát hương.", "Chúc cho một nửa xinh đẹp của thế giới những điều tốt đẹp nhất!", "Happy Women&#39;s Day!"]'
         >
           <h1 class="wrap"></h1>
         </div>
